--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "mock-server": "./bin/index.js"
   },
   "scripts": {
-    "publish": "npm"
   },
   "keywords": [
     "mock",
@@ -22,8 +21,7 @@
   "bugs": {
     "url": "https://github.com/peakchen90/mock-server/issues"
   },
-  "author": "peakchen <1558267774@qq.com>",
-  "license": "ISC",
+  "author": "peakchen90 <1558267774@qq.com>",
   "dependencies": {
     "chalk": "^1.1.3",
     "chokidar": "^1.6.1",
